<resources>
    <!-- Default stuff -->
    <string name="app_name">Finance Tracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Menu stuff -->
    <string name="menuBtn_1">Dashboard</string>
    <string name="menuBtn_2">Manage Budgets</string>
    <string name="menuBtn_3">Budget History</string>

    <!-- Home page -->

    <!-- Hamburger menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <!-- Settings -->

    <!-- About -->
    <string name="about_blurb">Jessica Al Fahad, 2023. A basic school project turned side project. The original scope was very limited and not very user-friendly, which are the two main things I wanted to keep working on with this app.</string>

    <!-- Transaction page -->
    <string name="add_transaction_button">Add transaction</string>

    <!-- Manage balance -->
    <string name="open_balance_container">Modify balance</string>
    <string name="open_budget_container">Modify budget</string>
    <string name="add_balance_btn">Add to balance</string>
    <string name="remove_balance_btn">Remove from balance</string>
    <string name="add_budget_btn">Add to budget</string>
    <string name="remove_budget_btn">Remove from budget</string>
    <string name="delete_budget_btn">Delete selected budget</string>
    <string name="create_budget_btn">Create new budget</string>
</resources>